add_executable(finite_memory_dataset finite_memory_dataset.cpp)
add_executable(hybrid_memory_dataset hybrid_memory_dataset.cpp)
add_executable(vector_memory_dataset vector_memory_dataset.cpp)
add_executable(symbolic_format symbolic_format.cpp)

add_test(finite_memory_dataset finite_memory_dataset ${CMAKE_CURRENT_LIST_DIR})
add_test(hybrid_memory_dataset hybrid_memory_dataset ${CMAKE_CURRENT_LIST_DIR})
add_test(vector_memory_dataset vector_memory_dataset ${CMAKE_CURRENT_LIST_DIR})
add_test(symbolic_format symbolic_format ${CMAKE_CURRENT_LIST_DIR}/symbolic_format.cfg)
