# Static datasets and supporting classes
add_executable(finite_record finite_record.cpp)
add_executable(vector_record vector_record.cpp)
add_executable(hybrid_record hybrid_record.cpp)
add_executable(finite_memory_dataset finite_memory_dataset.cpp)
add_executable(vector_memory_dataset vector_memory_dataset.cpp)
add_executable(hybrid_memory_dataset hybrid_memory_dataset.cpp)
add_executable(symbolic_format symbolic_format.cpp)

add_test(finite_record finite_record)
add_test(vector_record vector_record)
add_test(hybrid_record hybrid_record)
add_test(finite_memory_dataset finite_memory_dataset ${CMAKE_CURRENT_LIST_DIR})
add_test(vector_memory_dataset vector_memory_dataset ${CMAKE_CURRENT_LIST_DIR})
add_test(hybrid_memory_dataset hybrid_memory_dataset ${CMAKE_CURRENT_LIST_DIR})
add_test(symbolic_format symbolic_format ${CMAKE_CURRENT_LIST_DIR}/symbolic_format.cfg)

# Sequence datasets and supporting classes
add_executable(finite_sequence_record finite_sequence_record.cpp)
add_executable(vector_sequence_record vector_sequence_record.cpp)
add_executable(hybrid_sequence_record hybrid_sequence_record.cpp)
add_executable(simple_process_index_map simple_process_index_map.cpp)
add_executable(sequence_memory_dataset sequence_memory_dataset.cpp)
add_executable(sequence_dataset_views sequence_dataset_views.cpp)

add_test(finite_sequence_record finite_sequence_record)
add_test(vector_sequence_record vector_sequence_record)
add_test(hybrid_sequence_record hybrid_sequence_record)
add_test(simple_process_index_map simple_process_index_map)
add_test(sequence_memory_dataset sequence_memory_dataset)
add_test(sequence_dataset_views sequence_dataset_views)
