
add_executable(all_pairs_batch all_pairs_batch.cpp)
add_executable(batch_booster_OC batch_booster_OC.cpp)
add_executable(classifier_cascade classifier_cascade.cpp)
#add_executable(classifier_filter_oracle classifier_filter_oracle.cpp)
add_executable(decision_tree decision_tree.cpp)
add_executable(filtering_booster_OC filtering_booster_OC.cpp)
add_executable(linear_regression linear_regression.cpp)
add_executable(logistic_regression logistic_regression.cpp)
add_executable(multiclass2multilabel multiclass2multilabel.cpp)
add_executable(multiclass_logistic_regression multiclass_logistic_regression.cpp)
add_executable(proto_knn proto_knn.cpp)
add_executable(tree_sampler tree_sampler.cpp)
add_executable(stump stump.cpp)
