add_executable(chow_liu chow_liu.cpp)
#add_executable(decompsable_iterator decomposable_iterator.cpp)
add_executable(decomposable_iterators decomposable_iterators.cpp)
#add_executable(structure_search structure_search.cpp)
add_executable(test_decomposable_search test_decomposable_search.cpp)
add_executable(dmoves dmoves.cpp)

add_test(chow_liu chow_liu)
